# invos-mock-demo

./: .dockerignore  .gitignore  CLAUDE.md  CODEBASE.md  Makefile  README.md  docker-compose.yml  kind-config.yaml  note.txt  step-2-data-generation.md  step-3-ingestion.md  step-4-k6-load-testing.md  step-5-grafana-monitoring.md
db/migrations/: 001_init.sql  002_stats_indexes.sql
docs/: invoice-spec.md  plan.md  step-1-server-and-database.md  step-3-ingestion.md
generator/: .gitignore  README.md  config.yaml  pyproject.toml
generator/generator/: __init__.py  __main__.py  cache.py  campaign.py  invoices.py  population.py
generator/tests/: conftest.py  test_generator.py
k8s/: README.md  grafana-deployment.yaml  ingest-deployment.yaml  ingest-hpa-custom.yaml  ingest-hpa.yaml  ingest-svc.yaml  kube-state-metrics.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  pgbouncer.yaml  postgres-secret.yaml  postgres-statefulset.yaml  postgres-svc.yaml  prometheus-adapter.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml
loadtest/: README.md  prepare.js  verify.sql
loadtest/lib/: checks.js  payloads.js
loadtest/profiles/: load.js  scale.js  smoke.js  soak.js  stress.js
monitoring/: README.md
monitoring/prometheus/: prometheus.yml
scripts/: README.md  demo.sh  run.sh  stop-demo.sh
server/: Dockerfile  package-lock.json  package.json
server/scripts/: migrate.js  replay.js
server/src/: app.js  db.js  ingest.js  metrics.js  server.js
server/test/: health.test.js  stats.test.js  (+1 more)
steps/: step-1-server-and-database.md  step-5-grafana-monitoring.md
(+9 files in other folders)
