# pyproject.toml — uv-managed Python project for the mock invoice data generator.
# Produces deterministic NDJSON files only; no DB or network access (see step-2 spec).
[project]
name = "invos-generator"
version = "0.1.0"
description = "Deterministic mock Taiwanese e-invoice data generator (NDJSON)"
requires-python = ">=3.12"
dependencies = [
    "faker>=25",
    "numpy>=2",
    "pyyaml>=6",
    "pyarrow>=16",   # Parquet cache of generated invoices
]

[project.optional-dependencies]
# Test-only deps; install with: uv sync --extra test
test = ["pytest>=8"]

[tool.uv]
# Keep the virtualenv inside the repo at generator/.venv (uv default when run here).
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["generator"]
